Interaction entre les composants (parent-enfant)

--- a/src/app/first/first.html
+++ b/src/app/first/first.html
@@ -13,4 +13,8 @@
 <br>
 
 <input #inp [value]="prenom" (input)="updatePrenom(inp.value)" type="text" class="form-control">
+
+<hr>
+
+<app-second (eventToParent)="updatePrenom($event)" [txtColor]="'blue'"></app-second>
     
