--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,6 @@
 <h3>Je suis le App Component</h3>
 <hr>
 <app-first></app-first>
+<hr>
+<hr>
+<app-second (eventToParent)="traitement($event)"></app-second>
