Squelette du projet + Model Candidat + Details template

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,10 @@
-<h3>Je suis le App Component</h3>
+<!-- <h3>Je suis le App Component</h3>
 <hr>
 <app-first></app-first>
 <hr>
 <hr>
-<app-second (eventToParent)="traitement($event)"></app-second>
+<app-second (eventToParent)="traitement($event)"></app-second> -->
+
+<div class="container">
+    <app-cv></app-cv>
+</div>
