--- a/src/app/cv/cv.html
+++ b/src/app/cv/cv.html
@@ -1,8 +1,14 @@
 <div class="row">
     <div class="col-5">
-        <app-liste></app-liste>
+        <app-liste (eventToCv)="recupererCandidat($event)" [allCandidates]="tabCandidats"></app-liste>
     </div>
     <div class="col-7">
-        <app-details></app-details>
+        @if (selectedCandidate) {
+            <app-details [selCandidate]="selectedCandidate"></app-details>
+            
+        }
+        @else {
+            <p>Veuillez selectionner un candidat...</p>
+        }
     </div>
 </div>
