NgStyle et NgClass

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -6,5 +6,8 @@
 <app-second (eventToParent)="traitement($event)"></app-second> -->
 
 <div class="container">
-    <app-cv></app-cv>
+  <!-- <app-cv></app-cv> -->
+  <!-- <app-home-accounts></app-home-accounts> -->
+  <!-- <app-direct></app-direct> -->
+  <app-manage-servers></app-manage-servers>
 </div>
